--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,8 @@ cython_debug/
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
+node_modules
+build
+dist
+config.json
+*.env
