--- a/api/package.json
+++ b/api/package.json
@@ -13,15 +13,15 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.0",
-    "@types/oracledb": "^5.2.3",
     "@types/pg": "^8.6.2",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "pg": "^8.7.1",
-    "pg-types": "^3.0.1"
+    "pg": "^8.7.1"
+  },
+  "peerDependencies": {
+    "@types/node": "^17.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
